python/versioned_docs/version-1.13/api/class-download.mdx
---
id: class-download
title: "Download"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[Download] objects are dispatched by page via the [page.on("download")](./api/class-page.mdx#page-event-download) event.

All the downloaded files belonging to the browser context are deleted when the browser context is closed.

Download event is emitted once the download starts. Download path becomes available once download completes:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
with page.expect_download() as download_info:
    page.click("a")
download = download_info.value
# wait for download to complete
path = download.path()
```

</TabItem>
<TabItem value="async">

```py
async with page.expect_download() as download_info:
    await page.click("a")
download = await download_info.value
# waits for download to complete
path = await download.path()
```

</TabItem>
</Tabs>

:::note
Browser context **must** be created with the `accept_downloads` set to `true` when user needs access to the downloaded content. If `accept_downloads` is not set, download events are emitted, but the actual download is not performed and user has no access to the downloaded files.
:::


- [download.cancel()](./api/class-download.mdx#download-cancel)
- [download.delete()](./api/class-download.mdx#download-delete)
- [download.failure()](./api/class-download.mdx#download-failure)
- [download.page](./api/class-download.mdx#download-page)
- [download.path()](./api/class-download.mdx#download-path)
- [download.save_as(path)](./api/class-download.mdx#download-save-as)
- [download.suggested_filename](./api/class-download.mdx#download-suggested-filename)
- [download.url](./api/class-download.mdx#download-url)

## download.cancel() {#download-cancel}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-cancel-return"/> &#60;[NoneType]&#62;<a href="#download-cancel-return" class="list-anchor">#</a>

Cancels a download. Will not fail if the download is already finished or canceled. Upon successful cancellations, `download.failure()` would resolve to `'canceled'`.

## download.delete() {#download-delete}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-delete-return"/> &#60;[NoneType]&#62;<a href="#download-delete-return" class="list-anchor">#</a>

Deletes the downloaded file. Will wait for the download to finish if necessary.

## download.failure() {#download-failure}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-failure-return"/> &#60;[NoneType]|[str]&#62;<a href="#download-failure-return" class="list-anchor">#</a>

Returns download error if any. Will wait for the download to finish if necessary.

## download.page {#download-page}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-page-return"/> &#60;[Page]&#62;<a href="#download-page-return" class="list-anchor">#</a>

Get the page that the download belongs to.

## download.path() {#download-path}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-path-return"/> &#60;[NoneType]|[pathlib.Path]&#62;<a href="#download-path-return" class="list-anchor">#</a>

Returns path to the downloaded file in case of successful download. The method will wait for the download to finish if necessary. The method throws when connected remotely.

Note that the download's file name is a random GUID, use [download.suggested_filename](./api/class-download.mdx#download-suggested-filename) to get suggested file name.

## download.save_as(path) {#download-save-as}
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-save-as-param-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path where the download should be copied.<a href="#download-save-as-param-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-save-as-return"/> &#60;[NoneType]&#62;<a href="#download-save-as-return" class="list-anchor">#</a>

Copy the download to a user-specified path. It is safe to call this method while the download is still in progress. Will wait for the download to finish if necessary.

## download.suggested_filename {#download-suggested-filename}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-suggested-filename-return"/> &#60;[str]&#62;<a href="#download-suggested-filename-return" class="list-anchor">#</a>

Returns suggested filename for this download. It is typically computed by the browser from the [`Content-Disposition`](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Disposition) response header or the `download` attribute. See the spec on [whatwg](https://html.spec.whatwg.org/#downloading-resources). Different browsers can use different logic for computing it.

## download.url {#download-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-url-return"/> &#60;[str]&#62;<a href="#download-url-return" class="list-anchor">#</a>

Returns downloaded url.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"